force-app/main/default/objects/Room_Type__c/Room_Type__c.object-meta.xml
<CustomObject>
    <label>Room Type</label>
    <nameField>
        <label>Room Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room Type</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>