force-app/main/default/objects/Room_Type__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Room Type</relationshipLabel>
    <relationshipName>Room_Type</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>