force-app/main/default/objects/Room_Type__c/fields/Double_Number_Of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Double_Number_Of_Bedrooms__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Double Number Of Bedrooms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>