force-app/main/default/objects/Room_Type__c/fields/Room_Description__c.field-meta.xml
<CustomField>
    <fullName>Room_Description__c</fullName>
    <label>Room Description</label>
    <type>TextArea</type>
</CustomField>