force-app/main/default/objects/Room_Type__c/fields/Twin_Number_Of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Twin_Number_Of_Bedrooms__c</fullName>
    <label>Twin Number Of Bedrooms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>