force-app/main/default/objects/Room_Type__c/fields/Unique_Identifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier_Code__c</fullName>
    <label>Unique Identifier Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>